*Wrap version number in span tag to add styles *Create getNameTokenlength to get the length of the display name(since we took out a character) * fix logic to move cursor in appsupport

--- a/client/src/styles/_fluid.scss
+++ b/client/src/styles/_fluid.scss
@@ -50,6 +50,11 @@
   color: black;
 }
 
+.version{
+  opacity: 0.5;
+  font-size: 10px;
+}
+
 #fluid-editor {
   /* Colors from tomorrow night:
 https://github.com/chriskempson/tomorrow-theme */
